# tpu-demo

./: CMakeLists.txt  README.md
include/tpu_mlir/: CMakeLists.txt  InitAll.h
include/tpu_mlir/Backend/: Arch.h
include/tpu_mlir/Backend/BM168x/: BM168x.h  Param.h
include/tpu_mlir/Backend/CV18xx/: CV18xx.h
include/tpu_mlir/Conversion/: CMakeLists.txt  Conversion.h  Passes.h  Passes.td
include/tpu_mlir/Conversion/TopToTosa/: OpLowering.h  TopLowering.h
include/tpu_mlir/Conversion/TopToTpu/: TopLowering.h  TopToTpu.h
include/tpu_mlir/Dialect/Top/IR/: CMakeLists.txt  TopOps.h  TopOps.td
include/tpu_mlir/Dialect/Top/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/tpu_mlir/Dialect/Tpu/IR/: CMakeLists.txt  TpuOps.h  TpuOps.td
include/tpu_mlir/Dialect/Tpu/Transforms/Codegen/Dynamic/: DynCompileCommon.h  DynamicLayer.h
include/tpu_mlir/Interfaces/: CMakeLists.txt  FlopsInterface.h  FlopsInterface.td  GlobalGenInterface.h  IndexingMapsInterface.h  InferenceInterface.h  InferenceInterface.td  LocalGenInterface.h  ShapeInterface.h  ShapeInterface.td  TypeInterface.h
include/tpu_mlir/Support/: AttrStruct.h  Float16.h  MathUtils.h  Module.h  Module.td  TensorFile.h
include/tpu_mlir/Support/Dnnl/: Attention.h  Binary.h  Concat.h  Conv.h  Deconv.h  Dnnl.h  DnnlUtils.h  LRN.h  MatMul.h  PRelu.h  Pool.h  Softmax.h  common.h
include/tpu_mlir/Traits/: Traits.h  Traits.td
lib/: CMakeLists.txt  InitAll.cpp
lib/Backend/: Arch.cpp  CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/TopToTosa/: CMakeLists.txt  TopToTosaPass.cpp
lib/Conversion/TopToTpu/: CMakeLists.txt  TopToTpuPass.cpp
lib/Conversion/TopToTpu/BM1684/: Abs.cpp
lib/Dialect/Top/: CMakeLists.txt
lib/Dialect/Top/Canonicalize/: Add.cpp  BatchNorm.cpp  Concat.cpp  Conv.cpp  Depth2Space.cpp  Div.cpp  Loop.cpp  MatMul.cpp  Max.cpp  Min.cpp  Mul.cpp  MulConst.cpp  Permute.cpp  Relu.cpp  Reshape.cpp  Scale.cpp
lib/Dialect/Top/IR/: TopOps.cpp
lib/Dialect/Top/Interfaces/: Add.cpp  AddConst.cpp  BatchNorm.cpp  Concat.cpp  Conv.cpp  Depth2Space.cpp  Div.cpp  If.cpp  Loop.cpp  MatMul.cpp  Max.cpp  MaxConst.cpp  Min.cpp  MinConst.cpp  Mul.cpp  MulConst.cpp  Permute.cpp  Relu.cpp  Reshape.cpp  Scale.cpp  Sub.cpp  SubConst.cpp  Weight.cpp
lib/Dialect/Top/Transforms/: Deinit.cpp  ExtraOptimize.cpp  ImportCalibration.cpp  Init.cpp  QDQConvert.cpp  ShapeInfer.cpp
lib/Dialect/Tpu/: CMakeLists.txt
lib/Dialect/Tpu/IR/: TpuOps.cpp
lib/Dialect/Tpu/Interfaces/BM1684/: Cast.cpp  Conv2D.cpp  Conv3D.cpp  If.cpp  Loop.cpp
lib/Dialect/Tpu/Interfaces/BM1684X/: Cast.cpp  Conv2D.cpp  Conv3D.cpp  If.cpp  Loop.cpp
lib/Dialect/Tpu/Interfaces/CV18xx/: Cast.cpp  Conv2D.cpp  Conv3D.cpp  If.cpp  Loop.cpp
lib/Dialect/Tpu/Interfaces/Common/: Buffer.cpp  Cast.cpp  Conv2D.cpp  Conv3D.cpp  If.cpp  Loop.cpp
lib/Interfaces/: CMakeLists.txt  DynGlobalGenInterface.cpp  DynLocalGenInterface.cpp  FlopsInterface.cpp  GlobalGenInterface.cpp  IndexingMapsInterface.cpp  InferenceInterface.cpp  LocalGenInterface.cpp  ShapeInterface.cpp  TypeInterface.cpp
lib/Support/: CMakeLists.txt  Float16.cpp  MathUtils.cpp  Module.cpp  TensorFile.cpp  bitcasts.h
lib/Support/Dnnl/: Binary.cpp  Concat.cpp  Conv.cpp  DnnlUtils.cpp  MatMul.cpp  PRelu.cpp
lib/Traits/: CMakeLists.txt  Traits.cpp
test/: TorchSample_origin.mlir  torchsample_top_f32_all_origin_weight.npz  yolov5s_origin.mlir
tools/: CMakeLists.txt
tools/tpuc-opt/: CMakeLists.txt  tpuc-opt.cpp
unitest/: CMakeLists.txt  Test.cpp
